fix jdk8 errors